# vaultguard

./: .gitignore  CITATION.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
gui/: CMakeLists.txt  main.cpp
gui/qml/: AmbientBackground.qml  DashboardScreen.qml  GhostButton.qml  GlassCard.qml  GroupLabel.qml  Icon.qml  Main.qml  NavRail.qml  PasswordField.qml  PasswordStrength.qml  Pill.qml  PrepareScreen.qml  PrimaryButton.qml  RecoverScreen.qml  SecretRevealDialog.qml  SecretRow.qml  ShieldGlyph.qml  StoreWalletScreen.qml  Theme.qml  ThemeToggle.qml  Toast.qml  UnlockScreen.qml  VaultController.qml  VaultTextField.qml
include/: block.cppm  crypto.cppm  file.cppm  utils.cppm  wallet.cppm
src/: main.cpp  recover_key.cpp
tests/: wallet_integration_tests.cpp  wallet_security_tests.cpp
